--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SQL-Shell
-version:      1.14
+version:      1.15
 version_from: lib/SQL/Shell.pm
 installdirs:  site
 requires:
     DBI:                           0
+    IO::Scalar:                    0
     IO::CaptureOutput:             0
     Log::Trace:                    0
     Test::Assertions:              0
